Inclusão da api de cadastro de médico.