@@ -3,12 +3,15 @@ package com.clinica.sertao_api.infra.exception;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 @RestControllerAdvice
 public class RestExceptionHandler {
@@ -18,7 +21,7 @@ public class RestExceptionHandler {
     public ResponseEntity<List<ValidationError>> handleValidationExceptions(MethodArgumentNotValidException ex) {
         List<ValidationError> errors = ex.getBindingResult().getFieldErrors().stream()
                 .map(error -> new ValidationError(error.getField(), error.getDefaultMessage()))
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.badRequest().body(errors);
     }
 
@@ -30,9 +33,11 @@ public class RestExceptionHandler {
 
     @ExceptionHandler(DataIntegrityViolationException.class)
     public ResponseEntity<Object> handleDataIntegrityViolation(DataIntegrityViolationException ex) {
-        if (ex.getMessage().contains("medico.email")) {
-            return new ResponseEntity<>("E-mail já cadastrado.", HttpStatus.CONFLICT);
-        }
-        return new ResponseEntity<>("Erro de integridade dos dados.", HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>("Dados já cadastrados.", HttpStatus.CONFLICT);
+    }
+
+    @ExceptionHandler(BusinessException.class)
+    public ResponseEntity<Object> handleBusinessException(BusinessException ex) {
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
     }
 }
